--- a/readme
+++ b/readme
@@ -3,3 +3,9 @@ First commit
 
 Second commit
 Практика свойств на проекте
+
+Third commit
+Добавляем нового сотрудника
+
+Fourth commit
+Реализация фильтров и поиска
